update working client

--- a/client/res.qrc
+++ b/client/res.qrc
@@ -34,5 +34,7 @@
         <file>Images/Tools.png</file>
         <file>Images/Wait.png</file>
         <file>Images/Warning.png</file>
+        <file>Images/lemon.png</file>
+        <file>Images/lemon.ico</file>
     </qresource>
 </RCC>
